# loop-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  report.html  report.ja.md  report.md
.github/ISSUE_DRAFTS/: 001-docs-consistency-0-1-1.md  002-public-api-boundary-0-2.md  003-cli-persistence-contract.md  004-release-metadata-policy.md  005-1-0-release-gate.md
.github/workflows/: ci.yml  release.yml  sync-skill-references.yml
docs/: ai-api-map.md  api-reference.md  api-surface.md  async.md  cli.md  errors.md  first-harness-api.md  observability.md  operations-roadmap.md  persistence-and-resume.md  quickstart.md  reflexion-when-to-use.md  reflexion.md  releasing.md  review.md  safety.md  seams.md  stability.md  throttling.md  transport.md  version-readiness-roadmap.md
docs/adapters/: README.md  writing-an-adapter.md
docs/dogfood/: self-translation-poc.md
docs/ja/: api-reference.md  api-surface.md  errors.md  first-harness-api.md  observability.md  persistence-and-resume.md  quickstart.md  reflexion.md  seams.md  stability.md  throttling.md  verifiers.md
docs/ja/recipes/: README.md  circuit-breakers.md  multi-item-work-list.md  self-maintenance.md  timeout-and-kill.md
docs/recipes/: README.md  circuit-breakers.md  flaky-test-stabilization.md  multi-item-work-list.md  production-harnesses.md  refactor.md  review-driven-loop.md  self-maintenance.md  timeout-and-kill.md  translation.md
examples/: observed_demo.py  reflexion_demo.py  task.toml  verify_driven_demo.py  version_readiness_task.toml
examples/self_translation_poc/: harness.py  run_no_reflexion.jsonl  run_no_reflexion.metrics.json  run_reflexion.jsonl  run_reflexion.metrics.json  verify.py
scripts/: consume_version_readiness_issues.py  create_version_readiness_issues.ps1  efficient_translation_harness.py  review_version_readiness_pr.py  sync_skill_references.py  verify_wheel_skill_bundle.py  version_readiness_harness.py
src/claude_loop/: __init__.py  conditions.py  convergence.py  demo.py  discovery.py  evaluator.py  events.py  gate.py  loop.py  memory.py  observe.py  otel.py  progress.py  reflexion.py  reflexion_observe.py  reflexion_store.py  store.py  transport.py  waker.py
src/loop_agent/: __init__.py  _async.py  cli.py  conditions.py  convergence.py  demo.py  discovery.py  errors.py  evaluator.py  events.py  gate.py  loop.py  memory.py  notify.py  observe.py  operations.py  otel.py  progress.py  reflexion.py  reflexion_observe.py  reflexion_store.py  state.py  store.py  transport.py  verifiers.py  waker.py
src/loop_agent/adapters/: __init__.py  base.py  claude_code.py  codex.py  model_ladder.py  model_preflight.py
src/loop_agent/discovery/: __init__.py  _triage.py  work_list.py
src/loop_agent/skills/loop-agent/: SKILL.md
src/loop_agent/skills/loop-agent/references/: api-map.md  async.md  design-philosophy.md  errors.md  persistence-and-resume.md  reflexion-when-to-use.md  safety.md  seams.md  transport.md  writing-an-adapter.md
src/loop_agent/skills/loop-agent/references/examples/: flaky-test.md  refactor.md  translation.md
tests/: conftest.py  test_adapters_claude_code.py  test_adapters_codex.py  test_adapters_model_ladder.py  test_adapters_model_preflight.py  test_async_loop.py  test_cli.py  test_concurrent_resume.py  test_conditions.py  test_convergence.py  test_discovery.py  test_efficient_translation_harness.py  test_errors.py  test_evaluator.py  test_events.py  test_gate.py  test_install_skills.py  test_loop.py  test_memory.py  test_notify.py  test_observe.py  test_operations.py  test_otel.py  test_progress.py  test_reflexion.py  test_reflexion_demo.py  test_reflexion_observe.py  test_reflexion_store.py  test_resume.py  test_runaway_guard.py  test_self_translation_poc.py  test_skill_references_sync.py  test_stability_contract.py  test_store.py  test_timeout.py  test_transport.py  test_transport_backends.py  test_verifiers.py  test_verify_demo.py  test_waker.py  (+1 more)
tests/adapters/: __init__.py  conftest.py  test_contract.py
