[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-agent"
version = "0.0.1"
description = "loop-agent PoC: a minimal gather->act->verify->repeat loop core with composable stop conditions."
readme = "README.md"
requires-python = ">=3.10"
# The loop core stays dependency-free. The only declared runtime dependency is
# `tomli` on Python 3.10 *for the CLI's TOML reader*: stdlib `tomllib` exists
# only on 3.11+, so 3.10 needs the (API-compatible) backport. On 3.11+ this
# resolves to nothing, keeping installs dependency-free.
dependencies = ['tomli>=1.1.0; python_version < "3.11"']

# CLI launcher (Issue #31). `loop-agent` drives a TOML-defined gather->act->
# verify loop; see loop_agent/cli.py. The CLI's TOML reader uses stdlib tomllib
# (Python 3.11+), or the declared `tomli` backport on 3.10.
[project.scripts]
loop-agent = "loop_agent.cli:main"

# OTel GenAI span 連携は optional 依存（report.md S4.5）。未導入環境では
# loop_agent.otel.LoopSpan が no-op へ degrade し、JSONL/event sink は動き続ける。
[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20"]
# dev では SDK も入れ、in-memory exporter で OTel span の中身まで CI で検証する。
dev = ["pytest>=7", "opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]

[tool.hatch.build.targets.wheel]
packages = ["src/loop_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Resolve `import loop_agent` against this checkout's src/ first, ahead of any
# editable install that might point at a sibling worktree, so the suite always
# tests the code in this tree regardless of the ambient environment.
pythonpath = ["src"]
