[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-agent"
version = "1.0.0"
description = "loop-agent: an embeddable loop engine for agents (gather -> act -> verify -> repeat, with composable stop conditions, persisted state, limited human gates, and an outer Reflexion loop)."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "agent",
    "agentic",
    "loop",
    "loop-engineering",
    "agent-loop",
    "llm",
    "reflexion",
    "react",
    "self-improving",
    "human-in-the-loop",
    "observability",
]
license = { file = "LICENSE" }
authors = [{ name = "happy-ryo" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The loop core stays dependency-free. The only declared runtime dependency is
# `tomli` on Python 3.10 *for the CLI's TOML reader* (Issue #31): stdlib
# `tomllib` exists only on 3.11+, so 3.10 needs the (API-compatible) backport.
# On 3.11+ this resolves to nothing, keeping installs dependency-free.
dependencies = ['tomli>=1.1.0; python_version < "3.11"']

# CLI launcher (Issue #31). `loop-agent` drives a TOML-defined gather->act->
# verify loop; see loop_agent/cli.py. The CLI's TOML reader uses stdlib tomllib
# (Python 3.11+), or the declared `tomli` backport on 3.10.
[project.scripts]
loop-agent = "loop_agent.cli:main"

[project.urls]
Homepage = "https://github.com/happy-ryo/loop-agent"
Repository = "https://github.com/happy-ryo/loop-agent"
Changelog = "https://github.com/happy-ryo/loop-agent/blob/main/CHANGELOG.md"
Issues = "https://github.com/happy-ryo/loop-agent/issues"

# Extras map to real optional functionality only:
#   otel  -> OTel GenAI span integration (loop_agent.otel; degrades to no-op when absent)
#   redis -> Redis-backed cross-process WakeQueue (loop_agent.transport.RedisWakeQueue; Issue #41)
#   test  -> running the suite (incl. OTel SDK for in-memory-exporter span assertions)
#   dev   -> test deps + lint/type/release tooling (ruff/mypy/build/twine)
# NOTE: the loop core and the default in-memory / SQLite (stdlib `sqlite3`)
# transports stay dependency-free. `redis` is required only by the optional
# cross-process RedisWakeQueue backend, which import-gates `redis` and raises a
# helpful error when the extra is not installed (report.md S3.3 / S4.6; Issue #41).
[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20"]
redis = ["redis>=4.2"]
test = [
    "pytest>=7",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dev = [
    "loop-agent[test]",
    "build>=1.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "twine>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loop_agent"]
# Ship the bundled coding-agent skill (Issue #73) as package data: SKILL.md +
# references/ live inside the package at loop_agent/skills/loop-agent/, so
# `pip install loop-agent` carries them and `loop-agent install-skills` copies
# them into a .claude/skills/ dir. hatchling includes non-.py files under the
# package by default; this pins the markdown bundle so it can never be silently
# dropped from the wheel. The sdist carries it too via hatchling's default
# (VCS-tracked) file selection, so the release (which builds the wheel from the
# sdist) keeps the bundle end to end.
artifacts = ["src/loop_agent/skills/**/*.md", "src/loop_agent/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Resolve `import loop_agent` against this checkout's src/ first, ahead of any
# editable install that might point at a sibling worktree, so the suite always
# tests the code in this tree regardless of the ambient environment.
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F821", "F822", "F823"]

[tool.mypy]
python_version = "3.10"
files = [
    "src/loop_agent/conditions.py",
    "src/loop_agent/convergence.py",
    "src/loop_agent/errors.py",
    "src/loop_agent/events.py",
    "src/loop_agent/memory.py",
    "src/loop_agent/progress.py",
    "src/loop_agent/state.py",
    "src/loop_agent/transport.py",
]
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
